# RAG_mlops25

rag/: README.md  pyproject.toml
rag/src/rag/: docker-compose.yaml
rag/src/rag/backend/: agents.py  api.py  constants.py  data_models.py
rag/src/rag/dockerfiles/: backend.dockerfile  frontend.dockerfile
rag/src/rag/exploration/: explore_knowledge_base.ipynb
rag/src/rag/frontend/: app.py
rag/src/rag/knowledge_base/articles.lance/_transactions/: 0-36477f3a-a69c-4a14-90d0-5c69f68e06e0.txn  0-8ec4906e-eb44-49a1-aa21-30e76723810c.txn  1-0a541403-1800-4915-b60a-6a0f15ed6932.txn  10-08b5130f-29b9-4500-aab8-f48b8455b93d.txn  2-a89a9e99-f1ea-4fa1-83a8-6c48f266d856.txn  3-b3c8180d-8f54-4547-911a-2cb7e032b1d4.txn  4-dc95f46c-db52-4b61-9171-187a19fe2cf6.txn  5-45afe338-e6a7-4c7c-afaf-a4da4a95e319.txn  6-4b70b919-2731-43e9-b953-6dd1bcbd10a5.txn  7-1016c11e-2bcd-469f-b252-84ffb96ad7d9.txn  8-eaa2a456-c00d-40ff-8f85-8b6870465bfc.txn  9-c110a77f-a1b3-4fde-acd9-4de59fdd9b60.txn
rag/src/rag/setup/: ingestion.py
